--- a/ui/pn_editname.ui
+++ b/ui/pn_editname.ui
@@ -184,7 +184,7 @@ color: rgb(239, 239, 239);</string>
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Apply|QDialogButtonBox::Close</set>
      </property>
     </widget>
    </item>
