--- a/ui/pn_edittaxa.ui
+++ b/ui/pn_edittaxa.ui
@@ -32,7 +32,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Reference</string>
+   <string>Edit reference</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0">
