--- a/ui/taxanames.ui
+++ b/ui/taxanames.ui
@@ -20,8 +20,8 @@
    <string>Taxonomy manager</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>icons/x-nomen.png</normaloff>icons/x-nomen.png</iconset>
+   <iconset resource="../_icons.qrc">
+    <normaloff>:/icons/x-nomen.png</normaloff>:/icons/x-nomen.png</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -401,8 +401,8 @@
                  <string>Add</string>
                 </property>
                 <property name="icon">
-                 <iconset>
-                  <normaloff>../icons/add.png</normaloff>../icons/add.png</iconset>
+                 <iconset resource="../_icons.qrc">
+                  <normaloff>:/icons/add.png</normaloff>:/icons/add.png</iconset>
                 </property>
                 <property name="iconSize">
                  <size>
@@ -427,8 +427,8 @@
                  <string>Edit</string>
                 </property>
                 <property name="icon">
-                 <iconset>
-                  <normaloff>../icons/editing.png</normaloff>../icons/editing.png</iconset>
+                 <iconset resource="../_icons.qrc">
+                  <normaloff>:/icons/editing.png</normaloff>:/icons/editing.png</iconset>
                 </property>
                 <property name="iconSize">
                  <size>
@@ -453,8 +453,8 @@
                  <string>Merge</string>
                 </property>
                 <property name="icon">
-                 <iconset>
-                  <normaloff>../icons/merge.png</normaloff>../icons/merge.png</iconset>
+                 <iconset resource="../_icons.qrc">
+                  <normaloff>:/icons/merge.png</normaloff>:/icons/merge.png</iconset>
                 </property>
                 <property name="iconSize">
                  <size>
@@ -495,8 +495,8 @@
                  <string>Remove</string>
                 </property>
                 <property name="icon">
-                 <iconset>
-                  <normaloff>../icons/remove.png</normaloff>../icons/remove.png</iconset>
+                 <iconset resource="../_icons.qrc">
+                  <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
                 </property>
                 <property name="iconSize">
                  <size>
@@ -601,8 +601,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>185</width>
-          <height>525</height>
+          <width>211</width>
+          <height>539</height>
          </rect>
         </property>
         <attribute name="label">
@@ -644,7 +644,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>183</width>
+          <width>211</width>
           <height>539</height>
          </rect>
         </property>
@@ -848,6 +848,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../_icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
